@@ -27,6 +27,7 @@ https://github.com/wastis/PulseEqualizerGui
 v2.1.3  (2022-04-01)
 - mini key map editor to easy create keymap file for equalizer, 
   including most important kodi commands
+- add support for kodi profiles (moved save location)
 - changes to improve menu speed on slow devices
 
 v2.1.2  (2022-03-22)
