@@ -18,8 +18,10 @@ from basic import handle
 from basic import infhandle
 from basic import opthandle
 from basic import log
-from basic import path_addon
 from basic import path_filter
+from basic import path_masterprofile
+from basic import path_profile
+from basic import path_settings
 
 from .spectrum import Spectrum
 
@@ -52,8 +54,12 @@ class SpecManager():
 		self.profile = None
 		self.profiles = {}
 
-		self.spec_path = path_addon + path_filter
+		self.spec_path = path_masterprofile + path_filter
 		if not os.path.exists(self.spec_path): os.makedirs(self.spec_path)
+
+		self.prof_path = path_profile + path_settings
+		if not os.path.exists(self.prof_path): os.makedirs(self.prof_path)
+		
 
 	def import_mic_file(self,fn):
 		name = os.path.split(fn)
@@ -79,6 +85,8 @@ class SpecManager():
 	def get_fil_specs(self):
 		log(self.spec_path)
 		result = []
+		if not os.path.exists(self.spec_path):
+			os.makedirs(self.spec_path)
 		files = os.listdir(self.spec_path)
 
 		for f in files:
@@ -155,13 +163,15 @@ class SpecManager():
 		for name,preamp,freq_db in presets[1:]:
 			self.profiles[name] = [preamp, freq_db]
 
-		fn = self.spec_path + "profiles.json"
+		fn = self.prof_path + "profiles.json"
 		with open(fn, "w") as f: f.write(json.dumps(self.profiles))
 
 	def profile_file_load(self):
-		fn = self.spec_path + "profiles.json"
+		fn = self.prof_path + "profiles.json"
 		try:
 			with open(fn) as f: self.profiles = json.loads(f.read())
+			if not isinstance(self.profiles,dict):
+				self.profiles={}
 		except IOError: self.profiles = {}
 		except Exception as e:
 			infhandle(e)
@@ -187,7 +197,7 @@ class SpecManager():
 		if self.profile is None: self.set_profile_default()
 		self.profiles[name] = [self.profile.preamp, self.profile.spec.freq_db]
 
-		fn = self.spec_path + "profiles.json"
+		fn = self.prof_path + "profiles.json"
 		with open(fn, "w") as f: f.write(json.dumps(self.profiles))
 
 	def profiles_get(self):
@@ -202,7 +212,7 @@ class SpecManager():
 			del self.profiles[name]
 		except Exception as e: opthandle(e)
 
-		fn = self.spec_path + "profiles.json"
+		fn = self.prof_path + "profiles.json"
 		with open(fn, "w") as f: f.write(json.dumps(self.profiles))
 
 	def calc_filter_freq(self, spec, filter_rate, sample_rate):
